Bug 57521 - free(): invalid pointer
Summary: free(): invalid pointer
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: git master
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Will Thompson
QA Contact: Telepathy bugs list
URL: http://cgit.collabora.com/git/user/wj...
Whiteboard: r+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2012-11-25 16:05 UTC by christian
Modified: 2012-12-06 16:29 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
debug output (38.81 KB, text/plain)
2012-11-25 16:05 UTC, christian
Details

Description christian 2012-11-25 16:05:09 UTC
Created attachment 70542 [details]
debug output

telepathy-gabble crashes when trying to connect to the League Of Legends XMPP Server.
Using pidgin with the same configuration settings succeeds.
See attached log file for more information
Comment 1 Will Thompson 2012-11-27 16:58:26 UTC
I have a test case reproducing this crash…
Comment 2 christian 2012-11-28 13:01:04 UTC
(In reply to comment #1)
> I have a test case reproducing this crash…

Great. Could you please provide a bit more details about it?
Comment 3 Will Thompson 2012-11-28 15:12:40 UTC
…and here's a branch which fixes it.

The bug is in the error-handling path in Gabble's privacy list code. Specifically, a GError is being freed with g_free (which is incorrect). http://cgit.collabora.com/git/user/wjt/telepathy-gabble/commit/?h=57521-crash-when-failing-to-create-invisible-list&id=3ada6c09df28114b120d2e3b91f232f17c231ec2 fixes it.
Comment 4 Jonny Lamb 2012-11-28 15:31:34 UTC
yes.
Comment 5 christian 2012-11-29 13:06:08 UTC
(In reply to comment #3)
> http://cgit.collabora.com/git/user/wjt/telepathy-gabble/commit/?h=57521-
> crash-when-failing-to-create-invisible-
> list&id=3ada6c09df28114b120d2e3b91f232f17c231ec2 fixes it.

Thank you very much, this works fine for me
Comment 6 Will Thompson 2012-12-06 16:29:50 UTC
Crash fixes merged to 0.16 for 0.16.5; everything merged to master for 0.17.2.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.