Don't crash when creating invisible privacy list fails.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=57521